<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardview_shadow_end_color"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <!-- Post image -->
        <ImageView
            android:id="@+id/imageViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_post_image"
            android:gravity="center"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="192dp"
            tools:srcCompat="@drawable/app_logo" />

        <!-- Post title -->
        <TextView
            android:id="@+id/textViewPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:background="@null"
            android:gravity="start|center"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPost"
            tools:text="Post Title" />

        <!-- Post details -->
        <TextView
            android:id="@+id/textViewPostDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:background="@null"
            android:gravity="top|start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPostTitle"
            tools:height="192dp"
            tools:text="Post Details" />

        <!-- Post creator -->
        <TextView
            android:id="@+id/textViewPostCreator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:background="@null"
            android:ems="10"
            android:gravity="start|center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPostDetails"
            tools:text="Post Creator" />

        <!-- Post interactions (except creator)-->
        <include
            android:id="@+id/layout_post_interactions"
            layout="@layout/layout_post_interactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:layout_constraintEnd_toStartOf="@+id/imageButton_editPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPostCreator"
            tools:visibility="visible" />

        <!--Delete post (creator only)-->
        <ImageButton
            android:id="@+id/imageButton_deletePost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_delete_post"
            android:src="@drawable/ic_delete_48"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPostCreator"
            tools:visibility="visible" />

        <!--Edit post (creator only)-->
        <ImageButton
            android:id="@+id/imageButton_editPost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_delete_post"
            android:src="@drawable/ic_edit_48"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_deletePost"
            app:layout_constraintTop_toBottomOf="@+id/textViewPostCreator"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>