...
    <ImageButton
        android:id="@+id/imageButtonAddPost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login_logo_placeholder"
        android:gravity="center|top"
        app:layout_constraintBottom_toTopOf="@+id/editTextAddPostTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo_black_48" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Blog Post Title" />

    <!-- Blog post details -->
    <EditText
        android:id="@+id/editTextAddPostDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@null"
        android:ems="10"
        android:gravity="top|start"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddPostTitle"
        tools:text="Blog Post Details" />

    <!-- Save button -->
    <Button
        android:id="@+id/buttonSavePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!--Saving progress-->
...
