...
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- Username -->
    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/hint_email"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginLogoPlaceholder" />

    <!-- Password -->
    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <!-- Login button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_24"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
        app:layout_constraintHorizontal_bias="0.0"
...
